Changelog
=========

These are all the changes in Lektor since the first public release.

3.0
---

- Switch to newer mistune (markdown parser).

2.4
---

- Resolved an issue with unicode errors being caused by the
  quickstart.

2.3
---

Released on 31st of May 2016

- Fixed an issue with `get_alts` not being available in the
  template environment.

2.2
---

Released on 12th of April 2016

- Corrected an issue where certain translations would not make the
  admin panel load.

2.1
---

Released on 12th of April 2016

- Fixed a code signing issue on OS X 10.10.3 and lower.

2.0
---

Released on 11th of April 2016

- Added `_discoverable` system field which controls if a page should show
  up in `children`.  The default is that a page is discoverable.  Setting it
  to `False` means in practical terms that someone needs to know the URL as
  all collection operations will not return it.
- Added `for_page` function to pagination that returns the pagiantion for a
  specific page.
- Make pagination next_page and prev_page be None on the edges.
- Allow plugins to provide publishers.
- Added `|markdown` filter.
- Added French translations.
- Unicode filenames as final build artifacts are now explicitly disallowed.
- Serve up a 404.html as an error page in the dev server.
- Improvements to the path normalization and alt handling.  This should support
  URL generation in more complex cases between alts now.
- Show a clearer error message when URL generation fails because a source
  object is virtual (does not have a path).
- Empty text is now still valid markdown.
- Lektor clean now loads the plugins as well.
- Basic support for type customization.
- Fields that are absent in a content file from an alternative are now pulled
  from the primary content file.
- Development server now resolves index.html for assets as well.
- Markdown processing now correctly adjusts links relative to where the
  rendered output is rendered.
- Added Dutch translations.