@@ -11,12 +11,12 @@ from lektor.reporter import CliReporter
 
 class LektorInfo(object):
 
-    def __init__(self, env, output_path, ui_lang='en', build_flags=None,
+    def __init__(self, env, output_path, ui_lang='en', extra_flags=None,
                  verbosity=0):
         self.env = env
         self.ui_lang = ui_lang
         self.output_path = output_path
-        self.build_flags = build_flags
+        self.extra_flags = extra_flags
         self.verbosity = verbosity
 
     def get_pad(self):
@@ -25,7 +25,7 @@ class LektorInfo(object):
     def get_builder(self, pad=None):
         if pad is None:
             pad = self.get_pad()
-        return Builder(pad, self.output_path, build_flags=self.build_flags)
+        return Builder(pad, self.output_path, extra_flags=self.extra_flags)
 
     def get_failure_controller(self, pad=None):
         if pad is None:
@@ -73,10 +73,10 @@ class LektorInfo(object):
 class WebUI(Flask):
 
     def __init__(self, env, debug=False, output_path=None, ui_lang='en',
-                 verbosity=0, build_flags=None):
+                 verbosity=0, extra_flags=None):
         Flask.__init__(self, 'lektor.admin', static_url_path='/admin/static')
         self.lektor_info = LektorInfo(env, output_path, ui_lang,
-                                      build_flags=build_flags,
+                                      extra_flags=extra_flags,
                                       verbosity=verbosity)
         self.debug = debug
         self.config['PROPAGATE_EXCEPTIONS'] = True
