@@ -4,6 +4,7 @@ tests_require = [
     'pytest',
     'pytest-cov',
     'pytest-mock',
+    'pytest-click',
 ]
 
 setup(
